[package]
name = "gl-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = {version="0.13.2", features=["default", "multi-threaded"]}
glium = "0.34.0"
winit = "0.29.15"

[profile.dev.package."*"]
opt-level = 3
