[package]
name = "gl-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.34.0"
glutin = "0.31.3"
glutin-winit = "0.4.2"
raw-window-handle = "0.5.2"
winit = { version="0.29.15", default-features=false, features=["rwh_05"] }

[dependencies.bevy]
version="0.13.2"
default-features=false
features=["multi-threaded", "bevy_winit"]

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
rand = "0.8.5"
